<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Menu items in the overflow menu -->
    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/menu_contacts"
        app:showAsAction="never"
        android:visible="true" />
        
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="never"
        android:visible="true" />
        
    <item
        android:id="@+id/action_firebase_settings"
        android:icon="@drawable/ic_firebase"
        android:title="@string/firebase_settings"
        app:showAsAction="never"
        android:visible="true" />
        
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"
        android:visible="true" />
</menu>
